--- a/index.css
+++ b/index.css
@@ -36,6 +36,16 @@ body{
     
 }
 
+.nav-links:hover{
+	cursor: pointer;
+}
+
+.video{
+	position: absolute;
+	left: 20%;
+	top: 60%;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
